--- a/Ejemplo_Repositorio/nbproject/private/private.properties
+++ b/Ejemplo_Repositorio/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\gon_k\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\nicop\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
