--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 hs_err_pid*
 replay_pid*
 Ejemplo_Repositorio/nbproject/private/private.xml
+Ejemplo_Repositorio/nbproject/private/private.properties
